--- a/staff.html
+++ b/staff.html
@@ -1,183 +1,1 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]><html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head>
-    <meta charset="utf-8">
-    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
-    <title>USC Ideas Exchange Laboratory - Home</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet">
-
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/templatemo_misc.css">
-    <link rel="stylesheet" href="css/templatemo_style.css">
-
-    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-
-</head>
-<body>
-    <!--[if lt IE 7]>
-    <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-    <![endif]-->
-    <div id="front">
-        <div class="site-header">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4 col-sm-6 col-xs-6">
-                        <div id="templatemo_logo">
-                            <h1><a href="home.html"><img src="images/sample_logo.png"></a></h1>
-                        </div> <!-- /.logo -->
-                    </div> <!-- /.col-md-4 -->
-                    <div class="col-md-8 col-sm-6 col-xs-6">
-                        <a href="#" class="toggle-menu"><i class="fa fa-bars"></i></a>
-                        <div class="main-menu">
-                            <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="services.html">Services</a></li>
-                                <li><a href="history.html">History</a></li>
-                                <li><a href="staff.html">Staff</a></li>
-                            </ul>
-                        </div> <!-- /.main-menu -->
-                    </div> <!-- /.col-md-8 -->
-                </div> <!-- /.row -->
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="responsive">
-                            <div class="main-menu">
-                                <ul>
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="services.html">Services</a></li>
-                                    <li><a href="history.html">History</a></li>
-                                    <li><a href="staff.html">Staff</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> <!-- /.container -->
-        </div> <!-- /.site-header -->
-    </div> <!-- /#front -->
-
-    
-    <div id="products" class="content-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <h1 class="section-title">Our Friendly Staff</h1>
-                </div> <!-- /.col-md-12 -->
-            </div> <!-- /.row -->
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item">
-                        <div class="item-thumb">                          
-                            <img src="images/staff/1.jpg" alt="">
-                        </div> <!-- /.item-thumb -->
-                        <h3>Engr. Van B. Patiluna</h3>
-                        <span><em class="price">Section Head, CEAC-TC</em></span>
-                    </div> <!-- /.product-item -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item">
-                        <div class="item-thumb">
-                            <img src="images/staff/2.jpg" alt="">
-                        </div> <!-- /.item-thumb -->
-                        <h3>Jade Anthony dela Peña</h3>
-                        <span><em class="price">Network Administrator</em></span>
-                    </div> <!-- /.product-item -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item">
-                        <div class="item-thumb">                           
-                            <img src="images/staff/3.jpg" alt="">
-                        </div> <!-- /.item-thumb -->
-                        <h3>Judd Nelson Tecson</h3>
-                        <span><em class="price">Network Administrator</em></span>
-                    </div> <!-- /.product-item -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item">
-                        <div class="item-thumb">
-                            <img src="images/staff/4.jpg" alt="">
-                        </div> <!-- /.item-thumb -->
-                        <h3>Joshua Yuri Requioma</h3>
-                        <span><em class="price">Technical Support</em></span>
-                    </div> <!-- /.product-item -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item">
-                        <div class="item-thumb">
-                            <img src="images/staff/5.jpg" alt="">
-                        </div> <!-- /.item-thumb -->
-                        <h3>Hannah Rose Basilisco</h3>
-                        <span><em class="price">Inventory</em></span>
-                    </div> <!-- /.product-item -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item">
-                        <div class="item-thumb">
-                            <img src="images/staff/6.jpg" alt="">
-                        </div> <!-- /.item-thumb -->
-                        <h3>Beethoven Arellano</h3>
-                        <span><em class="price">Housekeeping</em></span>
-                    </div> <!-- /.product-item -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item">
-                        <div class="item-thumb">
-                            <img src="images/staff/7.jpg" alt="">
-                        </div> <!-- /.item-thumb -->
-                        <h3>Eurika Rhail Fajardo</h3>
-                        <span><em class="price">Documentation</em></span>
-                    </div> <!-- /.product-item -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item">
-                        <div class="item-thumb">
-                            <img src="images/staff/8.jpg" alt="">
-                        </div> <!-- /.item-thumb -->
-                        <h3>Mary Sheeva Mangas</h3>
-                        <span><em class="price">OJT</em></span>
-                    </div> <!-- /.product-item -->
-                </div> <!-- /.col-md-3 -->
-            </div> <!-- /.row -->
-        </div> <!-- /.container -->
-    </div> <!-- /#products -->
-
-    <div class="site-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-sm-6">
-                    <span>Copyright &copy;2015. <a href="#">All rights reserved.</a><br>
-						University of San Carlos - IDX Laboratory<br>
-						2F Lawrence Bunzel Bldg., University of San Carlos, Gov. M. Cuenco Avenue, Cebu City, 6000<br>
-						Phone: +63 (32) 253 1000 | Fax: +63 (32) 255 4341 | E-mail: idxlab@usc.edu.ph					
-					</span>
-                </div> <!-- /.col-md-6 -->
-                <div class="col-md-6 col-sm-6">
-                    <ul class="social">
-                        <li><a href="#" class="fa fa-facebook"></a></li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
-                        <li><a href="#" class="fa fa-instagram"></a></li>
-                    </ul>
-                </div> <!-- /.col-md-6 -->
-            </div> <!-- /.row -->
-        </div> <!-- /.container -->
-    </div> <!-- /.site-footer -->
-
-    
-    <script src="js/vendor/jquery-1.10.1.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
-    <script src="js/jquery.easing-1.3.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
-    <!-- templatemo 401 sprint -->
-</body>
-</html>
+<!DOCTYPE html><!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]--><!--[if IE 7]><html class="no-js lt-ie9 lt-ie8"><![endif]--><!--[if IE 8]><html class="no-js lt-ie9"><![endif]--><!--[if gt IE 8]><!--><html class=no-js><!--<![endif]--><head><meta charset=utf-8><!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]--><title>USC Ideas Exchange Laboratory - Home</title><meta name=description content=""><meta name=viewport content="width=device-width"><link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel=stylesheet><link rel=stylesheet href=css/bootstrap.min.css><link rel=stylesheet href=css/normalize.min.css><link rel=stylesheet href=css/font-awesome.min.css><link rel=stylesheet href=css/animate.css><link rel=stylesheet href=css/templatemo_misc.css><link rel=stylesheet href=css/templatemo_style.css><script src=js/vendor/modernizr-2.6.2.min.js></script><body><!--[if lt IE 7]><p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p><![endif]--><div id=front><div class=site-header><div class=container><div class=row><div class="col-md-4 col-sm-6 col-xs-6"><div id=templatemo_logo><h1><a href=home.html><img src=images/sample_logo.png></a></h1></div></div><div class="col-md-8 col-sm-6 col-xs-6"><a href=# class=toggle-menu><i class="fa fa-bars"></i></a><div class=main-menu><ul><li><a href=index.html>Home</a></li><li><a href=services.html>Services</a></li><li><a href=history.html>History</a></li><li><a href=staff.html>Staff</a></li></ul></div></div></div><div class=row><div class=col-md-12><div class=responsive><div class=main-menu><ul><li><a href=index.html>Home</a></li><li><a href=services.html>Services</a></li><li><a href=history.html>History</a></li><li><a href=staff.html>Staff</a></li></ul></div></div></div></div></div></div></div><div id=products class=content-section><div class=container><div class=row><div class="col-md-12 text-center"><h1 class=section-title>Our Friendly Staff</h1></div></div><div class=row><div class="col-md-3 col-sm-6"><div class=product-item><div class=item-thumb><img src=images/staff/1.jpg alt=""></div><h3>Engr. Van B. Patiluna</h3><span><em class=price>Section Head, CEAC-TC</em></span></div></div><div class="col-md-3 col-sm-6"><div class=product-item><div class=item-thumb><img src=images/staff/2.jpg alt=""></div><h3>Jade Anthony dela Peña</h3><span><em class=price>Network Administrator</em></span></div></div><div class="col-md-3 col-sm-6"><div class=product-item><div class=item-thumb><img src=images/staff/3.jpg alt=""></div><h3>Judd Nelson Tecson</h3><span><em class=price>Network Administrator</em></span></div></div><div class="col-md-3 col-sm-6"><div class=product-item><div class=item-thumb><img src=images/staff/4.jpg alt=""></div><h3>Joshua Yuri Requioma</h3><span><em class=price>Technical Support</em></span></div></div><div class="col-md-3 col-sm-6"><div class=product-item><div class=item-thumb><img src=images/staff/5.jpg alt=""></div><h3>Hannah Rose Basilisco</h3><span><em class=price>Inventory</em></span></div></div><div class="col-md-3 col-sm-6"><div class=product-item><div class=item-thumb><img src=images/staff/6.jpg alt=""></div><h3>Beethoven Arellano</h3><span><em class=price>Housekeeping</em></span></div></div><div class="col-md-3 col-sm-6"><div class=product-item><div class=item-thumb><img src=images/staff/7.jpg alt=""></div><h3>Eurika Rhail Fajardo</h3><span><em class=price>Documentation</em></span></div></div><div class="col-md-3 col-sm-6"><div class=product-item><div class=item-thumb><img src=images/staff/8.jpg alt=""></div><h3>Mary Sheeva Mangas</h3><span><em class=price>OJT</em></span></div></div></div></div></div><div class=site-footer><div class=container><div class=row><div class="col-md-6 col-sm-6"><span>Copyright &copy;2015. <a href=#>All rights reserved.</a><br>University of San Carlos - IDX Laboratory<br>2F Lawrence Bunzel Bldg., University of San Carlos, Gov. M. Cuenco Avenue, Cebu City, 6000<br>Phone: +63 (32) 253 1000 | Fax: +63 (32) 255 4341 | E-mail: idxlab@usc.edu.ph</span></div><div class="col-md-6 col-sm-6"><ul class=social><li><a href=# class="fa fa-facebook"></a></li><li><a href=# class="fa fa-twitter"></a></li><li><a href=# class="fa fa-instagram"></a></li></ul></div></div></div></div><script src=js/vendor/jquery-1.10.1.min.js></script><script>window.jQuery||document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>');</script><script src=js/jquery.easing-1.3.js></script><script src=js/bootstrap.js></script><script src=js/plugins.js></script><script src=js/main.js></script>
